# COSC363

Assignment 1/: Assignment1  Assignment1.cpp  Report.odt
Assignment 1/Textures/: Castle-Texture.tga  Desert-Castle-Wall.tga  Metal-Texture.tga
Assignment 1/Textures/Skybox/: down3.tga
Assignment 2/: HGC25-Report.odt
Assignment 2/build-src-Desktop-Default/: CMakeCache.txt  Makefile  RayTracer.out  assignment2.cbp  cmake_install.cmake
Assignment 2/src/: CMakeLists.txt  RayTracer.cpp
